@@ -42,6 +42,84 @@ abstract class CCodeModel extends CFormModel
 	const STATUS_SUCCESS=3;
 	const STATUS_ERROR=4;
 
+	static $keywords=array(
+		'__class__',
+		'__dir__',
+		'__file__',
+		'__function__',
+		'__line__',
+		'__method__',
+		'__namespace__',
+		'abstract',
+		'and',
+		'array',
+		'as',
+		'break',
+		'case',
+		'catch',
+		'cfunction',
+		'class',
+		'clone',
+		'const',
+		'continue',
+		'declare',
+		'default',
+		'die',
+		'do',
+		'echo',
+		'else',
+		'elseif',
+		'empty',
+		'enddeclare',
+		'endfor',
+		'endforeach',
+		'endif',
+		'endswitch',
+		'endwhile',
+		'eval',
+		'exception',
+		'exit',
+		'extends',
+		'final',
+		'final',
+		'for',
+		'foreach',
+		'function',
+		'global',
+		'goto',
+		'if',
+		'implements',
+		'include',
+		'include_once',
+		'instanceof',
+		'interface',
+		'isset',
+		'list',
+		'namespace',
+		'new',
+		'old_function',
+		'or',
+		'parent',
+		'php_user_filter',
+		'print',
+		'private',
+		'protected',
+		'public',
+		'require',
+		'require_once',
+		'return',
+		'static',
+		'switch',
+		'this',
+		'throw',
+		'try',
+		'unset',
+		'use',
+		'var',
+		'while',
+		'xor',
+	);
+
 	/**
 	 * @var array user confirmations on whether to overwrite existing code files with the newly generated ones.
 	 * The value of this property is internally managed by this class and {@link CCodeGenerator}.
@@ -386,85 +464,8 @@ abstract class CCodeModel extends CFormModel
 	 */
 	public function validateReservedWord($attribute,$params)
 	{
-		static $keywords=array(
-			'__class__',
-			'__dir__',
-			'__file__',
-			'__function__',
-			'__line__',
-			'__method__',
-			'__namespace__',
-			'abstract',
-			'and',
-			'array',
-			'as',
-			'break',
-			'case',
-			'catch',
-			'cfunction',
-			'class',
-			'clone',
-			'const',
-			'continue',
-			'declare',
-			'default',
-			'die',
-			'do',
-			'echo',
-			'else',
-			'elseif',
-			'empty',
-			'enddeclare',
-			'endfor',
-			'endforeach',
-			'endif',
-			'endswitch',
-			'endwhile',
-			'eval',
-			'exception',
-			'exit',
-			'extends',
-			'final',
-			'final',
-			'for',
-			'foreach',
-			'function',
-			'global',
-			'goto',
-			'if',
-			'implements',
-			'include',
-			'include_once',
-			'instanceof',
-			'interface',
-			'isset',
-			'list',
-			'namespace',
-			'new',
-			'old_function',
-			'or',
-			'parent',
-			'php_user_filter',
-			'print',
-			'private',
-			'protected',
-			'public',
-			'require',
-			'require_once',
-			'return',
-			'static',
-			'switch',
-			'this',
-			'throw',
-			'try',
-			'unset',
-			'use',
-			'var',
-			'while',
-			'xor',
-		);
 		$value=$this->$attribute;
-		if(in_array(strtolower($value),$keywords))
+		if(in_array(strtolower($value),self::$keywords))
 			$this->addError($attribute, $this->getAttributeLabel($attribute).' cannot take a reserved PHP keyword.');
 	}
 }
